🔧 Fixed MDX content not showing up same pages

--- a/storefront/components/NavigationCard/NavigationCard.module.css
+++ b/storefront/components/NavigationCard/NavigationCard.module.css
@@ -14,7 +14,7 @@
 
 .card:hover {
   color: inherit;
-  box-shadow: 0 2px 4px rgb(0 0 0 / 0.2);
+  box-shadow: 0 2px 6px rgb(0 0 0 / 0.2);
   transform: translateY(-8px);
   cursor: pointer;
 }
